# RMDI

./: CMakeLists.txt  MainServer.cpp  MainServer.h  README.md  ServerHA.cpp  ServerHA.h  client  client.cpp  clientRmlib.cpp  clientRmlib.h  main.cpp  memoryManager.cpp  memoryManager.h  monitorApp.cpp  monitorApp.h  rmRef_h.cpp  rmlib.cpp  rmlib.h  server  server.cpp  serverM.cpp
Connection/: clientRmlib.cpp  clientRmlib.h
Core/: rmlib.cpp  rmlib.h
RemoteMemory/: CMakeLists.txt  Links.txt  client  client.cpp  main.cpp  rmRef_h.h  rmlib.cpp  server  server.h  serverM.cpp
RemoteMemory/Structures/: LinkedList.cpp  LinkedList.h  Node.h
Structures/: LinkedList.cpp  Node.cpp
